Fix page header alignment on mobile view

--- a/src/components/AddWarehouse/AddWarehouse.scss
+++ b/src/components/AddWarehouse/AddWarehouse.scss
@@ -16,10 +16,6 @@
         }
     }
 
-    &__title {
-        font-size: 1.5rem;
-    }
-
     &__icon {
         width: 1.25rem;
         vertical-align: bottom;
