--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -28,7 +28,7 @@
     }
 
     &__title {
-        margin: 2rem 0 1rem 0;
+        margin: 1.5rem 0 1rem 0;
     }
 
     &__form {
